# phantom-grader

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: eval.py
src/phantom_grader/: __init__.py  cli.py  config.py  models.py  pipeline.py  vision.py
src/phantom_grader/stages/: __init__.py  extract_answers.py  grade.py  parse_assignment.py  report.py  solve_and_rubric.py
src/phantom_grader/utils/: __init__.py  image.py  pdf.py
